@@ -1089,57 +1089,57 @@
 14594,91,100	// Quagmire_Scroll
 
 // Battleground Rewards (Tierra Gorge/Flavius)
-13036,123,100	// BF_Dagger1
-13037,123,100	// BF_Dagger2
-13410,123,100	// BF_Sword1
-13411,123,100	// BF_Sword2
-1425,123,100	// BF_Spear1
-1632,123,100	// BF_Staff1
-1633,123,100	// BF_Staff2
-1634,123,100	// BF_Staff3
-1635,123,100	// BF_Staff4
-1542,123,100	// BF_Morning_Star1
-1543,123,100	// BF_Morning_Star2
-1923,123,100	// BF_Instrument1
-1924,123,100	// BF_Instrument2
-1977,123,100	// BF_Whip1
-1978,123,100	// BF_Whip2
-1574,123,100	// BF_Book1
-1575,123,100	// BF_Book2
-1823,123,100	// BF_Knuckle1
-1824,123,100	// BF_Knuckle2
-1183,123,100	// BF_Two_Handed_Sword1
-1184,123,100	// BF_Two_Handed_Sword2
-1482,123,100	// BF_Lance1
-1379,123,100	// BF_Two_Handed_Axe1
-1380,123,100	// BF_Two_Handed_Axe2
-13305,123,100	// BF_Huuma_Shuriken1
-13306,123,100	// BF_Huuma_Shuriken2
-1279,123,100	// BF_Katar1
-1280,123,100	// BF_Katar2
-1738,123,100	// BF_Bow1
-1739,123,100	// BF_Bow2
-13108,123,100	// BF_Pistol1
-13171,123,100	// BF_Rifle1
-13172,123,100	// BF_Gatling_Gun1
-13173,123,100	// BF_Shotgun1
-13174,123,100	// BF_Launcher1
-2538,123,100	// Commander_Manteau
-2539,123,100	// Commander_Manteau_
-2540,123,100	// Sheriff_Manteau
-2435,123,100	// Battle_Greave
-2436,123,100	// Combat_Boots
-2437,123,100	// Battle_Boots
-2376,123,100	// Assaulter_Plate
-2377,123,100	// Elite_Engineer_Armor
-2378,123,100	// Assassin_Robe
-2379,123,100	// Warlock_Battle_Robe
-2380,123,100	// Medic_Robe
-2381,123,100	// Elite_Archer_Suit
-2382,123,100	// Elite_Shooter_Suit
-2733,123,100	// Medal_Gunner
-7828,123,100	// BF_Badge1
-7829,123,100	// BF_Badge2
+13036,83,100	// BF_Dagger1
+13037,83,100	// BF_Dagger2
+13410,83,100	// BF_Sword1
+13411,83,100	// BF_Sword2
+1425,83,100	// BF_Spear1
+1632,83,100	// BF_Staff1
+1633,83,100	// BF_Staff2
+1634,83,100	// BF_Staff3
+1635,83,100	// BF_Staff4
+1542,83,100	// BF_Morning_Star1
+1543,83,100	// BF_Morning_Star2
+1923,83,100	// BF_Instrument1
+1924,83,100	// BF_Instrument2
+1977,83,100	// BF_Whip1
+1978,83,100	// BF_Whip2
+1574,83,100	// BF_Book1
+1575,83,100	// BF_Book2
+1823,83,100	// BF_Knuckle1
+1824,83,100	// BF_Knuckle2
+1183,83,100	// BF_Two_Handed_Sword1
+1184,83,100	// BF_Two_Handed_Sword2
+1482,83,100	// BF_Lance1
+1379,83,100	// BF_Two_Handed_Axe1
+1380,83,100	// BF_Two_Handed_Axe2
+13305,83,100	// BF_Huuma_Shuriken1
+13306,83,100	// BF_Huuma_Shuriken2
+1279,83,100	// BF_Katar1
+1280,83,100	// BF_Katar2
+1738,83,100	// BF_Bow1
+1739,83,100	// BF_Bow2
+13108,83,100	// BF_Pistol1
+13171,83,100	// BF_Rifle1
+13172,83,100	// BF_Gatling_Gun1
+13173,83,100	// BF_Shotgun1
+13174,83,100	// BF_Launcher1
+2538,83,100	// Commander_Manteau
+2539,83,100	// Commander_Manteau_
+2540,83,100	// Sheriff_Manteau
+2435,83,100	// Battle_Greave
+2436,83,100	// Combat_Boots
+2437,83,100	// Battle_Boots
+2376,83,100	// Assaulter_Plate
+2377,83,100	// Elite_Engineer_Armor
+2378,83,100	// Assassin_Robe
+2379,83,100	// Warlock_Battle_Robe
+2380,83,100	// Medic_Robe
+2381,83,100	// Elite_Archer_Suit
+2382,83,100	// Elite_Shooter_Suit
+2733,83,100	// Medal_Gunner
+7828,83,100	// BF_Badge1
+7829,83,100	// BF_Badge2
 
 7801,123,100	// Girl_Fan_Letter
 7802,123,100	// Autograph_Book
@@ -1295,44 +1295,44 @@
 6051,115,100	// Gray_Hollow
 
 // Battleground Rewards (Krieger Von Midgard)
-13416,115,100	// Krieger_Onehand_Sword1
-13417,115,100	// Krieger_Onehand_Sword2
-13418,115,100	// Krieger_Onehand_Sword3
-13042,115,100	// Krieger_Dagger1
-1310,115,100	// Krieger_Onehand_Axe1
-1426,115,100	// Krieger_Onehand_Spear1
-1546,115,100	// Krieger_Onehand_Mace1
-1576,115,100	// Krieger_Book1
-1577,115,100	// Krieger_Book2
-1640,115,100	// Krieger_Onehand_Staff1
-1641,115,100	// Krieger_Onehand_Staff2
-1826,115,100	// Krieger_Knuckle1
-1827,115,100	// Krieger_Knuckle2
-1927,115,100	// Krieger_Instrument1
-1981,115,100	// Krieger_Whip1
-1187,115,100	// Krieger_Twohand_Sword1
-1281,115,100	// Krieger_Katar1
-1282,115,100	// Krieger_Katar2
-1382,115,100	// Krieger_Twohand_Axe1
-1486,115,100	// Krieger_Twohand_Spear1
-2002,115,100	// Krieger_Twohand_Staff1
-13307,115,100	// Krieger_Huuma_Shuriken1
-1743,115,100	// Krieger_Bow1
-13110,115,100	// Krieger_Pistol1
-13176,115,100	// Krieger_Rifle1
-13177,115,100	// Krieger_Gatling1
-13178,115,100	// Krieger_Shotgun1
-13179,115,100	// Krieger_Launcher1
-2394,115,100	// Krieger_Suit1
-2444,115,100	// Krieger_Shoes1
-2549,115,100	// Krieger_Muffler1
-2772,115,100	// Krieger_Ring1
-2445,115,100	// Krieger_Shoes2
-2446,115,100	// Krieger_Shoes3
-2395,115,100	// Krieger_Suit2
-2396,115,100	// Krieger_Suit3
-2773,115,100	// Krieger_Ring2
-2774,115,100	// Krieger_Ring3
+13416,83,100	// Krieger_Onehand_Sword1
+13417,83,100	// Krieger_Onehand_Sword2
+13418,83,100	// Krieger_Onehand_Sword3
+13042,83,100	// Krieger_Dagger1
+1310,83,100	// Krieger_Onehand_Axe1
+1426,83,100	// Krieger_Onehand_Spear1
+1546,83,100	// Krieger_Onehand_Mace1
+1576,83,100	// Krieger_Book1
+1577,83,100	// Krieger_Book2
+1640,83,100	// Krieger_Onehand_Staff1
+1641,83,100	// Krieger_Onehand_Staff2
+1826,83,100	// Krieger_Knuckle1
+1827,83,100	// Krieger_Knuckle2
+1927,83,100	// Krieger_Instrument1
+1981,83,100	// Krieger_Whip1
+1187,83,100	// Krieger_Twohand_Sword1
+1281,83,100	// Krieger_Katar1
+1282,83,100	// Krieger_Katar2
+1382,83,100	// Krieger_Twohand_Axe1
+1486,83,100	// Krieger_Twohand_Spear1
+2002,83,100	// Krieger_Twohand_Staff1
+13307,83,100	// Krieger_Huuma_Shuriken1
+1743,83,100	// Krieger_Bow1
+13110,83,100	// Krieger_Pistol1
+13176,83,100	// Krieger_Rifle1
+13177,83,100	// Krieger_Gatling1
+13178,83,100	// Krieger_Shotgun1
+13179,83,100	// Krieger_Launcher1
+2394,83,100	// Krieger_Suit1
+2444,83,100	// Krieger_Shoes1
+2549,83,100	// Krieger_Muffler1
+2772,83,100	// Krieger_Ring1
+2445,83,100	// Krieger_Shoes2
+2446,83,100	// Krieger_Shoes3
+2395,83,100	// Krieger_Suit2
+2396,83,100	// Krieger_Suit3
+2773,83,100	// Krieger_Ring2
+2774,83,100	// Krieger_Ring3
 
 // Misc. Items
 7923,115,100	// KRATHONG_
@@ -1356,16 +1356,6 @@
 5460,115,100	// Adv_Dragon_Skull
 5461,115,100	// Adv_Whisper_Mask
 5464,123,100	// Zaha_Doll_Hat
-12333,123,100	// Ansila
-12725,91,100	// Runstone_Nosiege
-12726,91,100	// Runstone_Rhydo
-12727,91,100	// Runstone_Verkana
-12728,91,100	// Runstone_Isia
-12729,91,100	// Runstone_Asir
-12730,91,100	// Runstone_Urj
-12731,91,100	// Runstone_Turisus
-12732,91,100	// Runstone_Pertz
-12733,91,100	// Runstone_Hagalas
 5254,73,100	// Deviling_Hat
 14296,91,100	// Angel_Scroll
 14297,91,100	// Devil_Scroll
@@ -1454,10 +1444,6 @@
 //14361,91,100	// ???
 //14362,91,100	// ???
 //14363,91,100	// ???
-12323,115,100	// N_Fly_Wing
-12324,115,100	// N_Butterfly_Wing
-12325,115,100	// N_Magnifier
-2393,115,100	// N_Adventurer's_Suit
 //12400,83,100	// ???
 //2815,91,100	// ???
 5346,73,100	// Gf_Recruiter_Hat
@@ -1518,35 +1504,105 @@
 12348,91,100	// Manuk's_Faith
 12349,91,100	// Cornus'_Tears
 
-// Epidode 13.3
-//1192,123,100	// P_Slayer1
-//1193,123,100	// P_Slayer2
-//1650,123,100	// P_Staff1
-//1651,123,100	// P_Staff2
-//1747,123,100	// P_Bow1
-//1748,123,100	// P_Bow2
-//2456,123,100	// Para_Team_Boots1
-//2457,123,100	// Para_Team_Boots2
-//2458,123,100	// Para_Team_Boots3
-//2560,123,100	// Para_Team_Manteau
-//5583,123,100	// Para_Team_Hat
-//6219,123,100	// Para_Team_Mark
-//13050,123,100	// P_Dagger1
-//13051,123,100	// P_Dagger2
-//13112,123,100	// P_Revolver1
-//13113,123,100	// P_Revolver2
-//13423,123,100	// P_Sabre1
-//13424,123,100	// P_Sabre2
-//15009,123,100	// Para_Team_Uniform1
-//15010,123,100	// Para_Team_Uniform2
-//15011,123,100	// Para_Team_Uniform3
-//16004,123,100	// P_Mace1
-//16005,123,100	// P_Mace2
+// New Novice Training Grounds
+1381,115,100	// N_Battle_Axe
+1545,115,100	// N_Mace
+1639,115,100	// N_Rod
+1742,115,100	// N_Composite_Bow
+2393,115,100	// N_Adventurer's_Suit
+12323,123,100	// N_Fly_Wing
+12324,123,100	// N_Butterfly_Wing
+12325,123,100	// N_Magnifier
+13040,115,100	// N_Cutter
+13041,115,100	// N_Main_Gauche
+13415,115,100	// N_Falchion
 
-// Novice Training Grounds
-2819,123,100
-2820,123,100
-2821,123,100
-2822,123,100
-2823,123,100
-2824,123,100
+// Epidode 13.3
+// * Eden Group
+1192,123,100	// P_Slayer1
+1193,123,100	// P_Slayer2
+1650,123,100	// P_Staff1
+1651,123,100	// P_Staff2
+1747,123,100	// P_Bow1
+1748,123,100	// P_Bow2
+2456,123,100	// Para_Team_Boots1
+2457,123,100	// Para_Team_Boots2
+2458,123,100	// Para_Team_Boots3
+2560,123,100	// Para_Team_Manteau
+5583,123,100	// Para_Team_Hat
+6219,123,100	// Para_Team_Mark
+13050,123,100	// P_Dagger1
+13051,123,100	// P_Dagger2
+13112,123,100	// P_Revolver1
+13113,123,100	// P_Revolver2
+13423,123,100	// P_Sabre1
+13424,123,100	// P_Sabre2
+15009,123,100	// Para_Team_Uniform1
+15010,123,100	// Para_Team_Uniform2
+15011,123,100	// Para_Team_Uniform3
+16004,123,100	// P_Mace1
+16005,123,100	// P_Mace2
+
+// * Third Job-related
+1703,123,100	// Bow__
+2794,123,100	// Magic_Stone_Ring
+2795,115,100	// Green_Apple_Ring
+2796,123,100	// Magical_Stone
+2797,123,100	// Magical_Stone_
+5746,91,100	// Rune_Circlet
+5747,91,100	// Mitra
+5748,91,100	// Sniper_Goggle
+5749,91,100	// Driver_Band
+5750,91,100	// Shadow_Handicraft
+5751,91,100	// Minstrel_Song_Hat
+5752,91,100	// Midas_Whisper
+5753,91,100	// Magic_Stone_Hat
+5754,91,100	// Blazing_Soul
+5755,91,100	// Silent_Executer
+5756,91,100	// Wind_Whisper
+5757,91,100	// Schmidt_Helm
+5758,91,100	// Dying_Swan
+5760,91,100	// Driver_Band_
+6151,115,100	// Peice_Of_Great_Bradium
+6152,115,100	// Glittering_Crystal
+6153,123,100	// Special_Exchange_Coupon
+6154,115,100	// Broken_Horn_Pipe
+6156,115,100	// Approval_Report
+6266,123,100	// Cheat_Key
+6267,123,100	// Virtual_Key
+6268,123,100	// Mirth_Key
+6269,123,100	// Master_Brush
+6270,115,100	// Mins_Picture
+6271,115,100	// Mins_Receipt
+6274,123,100	// Saint_Cloth_Piece
+6275,123,100	// King_Shield
+6276,123,100	// Clear_Reagent
+6277,123,100	// Red_Reagent
+6278,123,100	// Black_Reagent
+12384,115,100	// Rainbow_Ruby_Water
+12385,115,100	// Rainbow_Ruby_Fire
+12386,115,100	// Rainbow_Ruby_Wind
+12387,115,100	// Rainbow_Ruby_Earth
+12388,123,100	// Runstone_Crush
+12389,123,100	// Runstone_Storm
+12390,123,100	// Runstone_Millennium
+2798,115,100	// Will_Of_Exhausted_Angel
+12258,115,100	// Bombring_Box
+12333,123,100	// Ansila
+12725,91,100	// Runstone_Nosiege
+12726,91,100	// Runstone_Rhydo
+12727,91,100	// Runstone_Verkana
+12728,91,100	// Runstone_Isia
+12729,91,100	// Runstone_Asir
+12730,91,100	// Runstone_Urj
+12731,91,100	// Runstone_Turisus
+12732,91,100	// Runstone_Pertz
+12733,91,100	// Runstone_Hagalas
+
+// * New Novice Training Grounds
+2819,115,100	// Swordman_Manual
+2820,115,100	// Thief_Manual
+2821,115,100	// Acolyte_Manual
+2822,115,100	// Archer_Manual
+2823,115,100	// Merchant_Manual
+2824,115,100	// Mage_Manual
